--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header>
   				<div class="wrap_nav">
     				<!-- logo  -->
-    				<div class="logo">Samson</div>
+    				<div class="logo"><h1>Samson</h1></div>
     				<!-- nav content  -->
       			 <div class="content_nav">
       			 	<ul class="nav">
@@ -35,19 +35,18 @@
 			<div class="main_content">
   			<div class="wrap_content">
   				
-    			<div class="central_content">
-            <div class="central_title"><h1>About Me</h1></div>
-      			<div class="central_bar"></div>
-      				<img src="assets/images/profile_picture.png">
-      				<div class="text">
-      					<h2>My name is Samson, here is what I want to be.</h2>  
-      					<p>I want to change the world with just an idea, and I beleive ideas can change to world.<br>
-      					I beleive our mission on earth as builders (in other worlds developers, designers or entrepreneurs) is to create things with meaningful impact and that the web has never had so much influence. "If Internet says it, then it is true". Let take that chance to influence people and give the world a meaningful and responsible direction.<br>
-      					My vision: create meaning everywhere there is not; Give poeple the tools to look outside of their confort zone and make a stance. 
-      					 </p>
-
-      				</div>
-    			</div>
+      			<div class="central_content">
+              <div class="central_title"><h1>About Me</h1></div>
+        			<div class="central_bar"></div>
+        				<img class="profile_pic" src="assets/images/profile_picture.png">
+        				  <div class="text">
+          					<h2>My name is Samson, here is what I want to be.</h2>  
+          					<p>I want to change the world with just an idea, and I beleive ideas can change to world.<br>
+          					I beleive our mission on earth as builders (in other worlds developers, designers or entrepreneurs) is to create things with meaningful impact and that the web has never had so much influence. "If Internet says it, then it is true". Let take that chance to influence people and give the world a meaningful and responsible direction.<br>
+          					My vision: create meaning everywhere there is not; Give poeple the tools to look outside of their confort zone and make a stance. 
+        					 </p>
+        				  </div>
+      			</div>
     			<div class="sidebar">
       			<div class="sidebar_title"><h1>Connect with Me</h1></div>
       			<div class="sidebar_bar"></div>
