--- a/index.html
+++ b/index.html
@@ -7,63 +7,48 @@
 			<link rel="shortcut icon" href="favicon.ico">
 			<link rel="icon" type="image/gif" href="animated_favicon1.gif">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-			
-			<meta charset="UTF-8">
     </head>
-    <!--Body-->
-		<body background="assets/images/ps_neutral.png">
 			
-			<!-- main page header  -->
-			<header>
-  				<div class="wrap_nav">
-    				<!-- logo  -->
-    				<div class="logo"><h1>Samson</h1></div>
-    				<!-- nav content  -->
-      			 <div class="content_nav">
-      			 	<ul class="nav">
-    						<li><a href="#">About</a></li>
-    						<li><a href="#">Portfolio</a></li>
-    						<li><a href="#">Contact</a></li>
-              </ul>
-    			   </div>
-      			<!-- nav content  -->
-      			<div class="content_header"></div>
-  				</div>
-			</header>
+    <body>
 
-			<!-- main page content  -->
-			<div class="main_content">
-  			<div class="wrap_content">
-  				
-      			<div class="central_content">
-              <div class="central_title"><h1>About Me</h1></div>
-        			<div class="central_bar"></div>
-        				<img class="profile_pic" src="assets/images/profile_picture.png">
-        				  <div class="text">
-          					<h2>My name is Samson, here is what I want to be.</h2>  
-          					<p>I want to change the world with just an idea, and I beleive ideas can change to world.<br>
-          					I beleive our mission on earth as builders (in other worlds developers, designers or entrepreneurs) is to create things with meaningful impact and that the web has never had so much influence. "If Internet says it, then it is true". Let take that chance to influence people and give the world a meaningful and responsible direction.<br>
-          					My vision: create meaning everywhere there is not; Give poeple the tools to look outside of their confort zone and make a stance. 
-        					 </p>
-        				  </div>
-      			</div>
-    			<div class="sidebar">
-      			<div class="sidebar_title"><h1>Connect with Me</h1></div>
-      			<div class="sidebar_bar"></div>
-      			<div class="sidebar_content">
-      				<a target="_blank" href="https://github.com/samsonlewin"><img src="assets/images/github.png"></a>
-      				<a target="_blank" href="https://fr.linkedin.com/in/samson-lewin"><img src="assets/images/linkedin.png"></a>
-      				<a target="_blank" href="http://stackoverflow.com/users/7289590/samson-lewin"><img src="assets/images/stack_overflow.png"></a>
-      			</div>
-    			</div>
-  			</div>
-			</div>
-			<!-- main page footer  -->
-			<footer>
-			<div class="footer_bar"></div>
-  			<div class="wrap_footer">
-    			<div class="content_footer"> © Made with love by Samson Lewin</div>
-  			</div>
-			</footer>
-		</body>
-	</html>
+    <!--Header-->
+      <header>
+          <div id="logo">Samson</div>
+          <ul id="menu">
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </header>
+
+      <!--content-->
+      <div id="content">
+
+      <!--BIO-->
+        <div id="bio">
+          <h1>About Me</h1>
+          <div id="bar1"></div>
+            <img class="profile_pic" src="assets/images/profile_picture.png">
+            <p>My name is Samson, here is what I want to be.</p>
+            <p>I want to change the world with just an idea, and I beleive ideas can change to world.<br>
+            I beleive our mission on earth as builders (in other worlds developers, designers or entrepreneurs) is to create things with meaningful impact and that the web has never had so much influence. "If Internet says it, then it is true". Let take that chance to influence people and give the world a meaningful and responsible direction.<br>
+            My vision: create meaning everywhere there is not; Give poeple the tools to look outside of their confort zone and make a stance. 
+            </p>
+        </div>
+        <!--social-->
+        <div id="social">
+          <h2>Connect With Me</h2>
+          <div id="bar2"></div>
+            <div id="icons">
+              <a target="_blank" href="https://github.com/samsonlewin"><img class="social" src="assets/images/github.png"></a>
+              <a target="_blank" href="https://fr.linkedin.com/in/samson-lewin"><img class="social" src="assets/images/linkedin.png"></a>
+              <a target="_blank" href="http://stackoverflow.com/users/7289590/samson-lewin"><img class="social" src="assets/images/stack_overflow.png"></a>
+            </div>
+        </div>
+      </div>
+
+       <!--footer-->
+      <footer><p id="content_footer">Made with live by Samson Lewin</p></footer>
+      
+    </body>
+   </html>
