--- a/contact.html
+++ b/contact.html
@@ -33,15 +33,15 @@
             <form id="contact_form" action="mailto:samsonlewin@gmail.com" method="POST" enctype="multipart/form-data">
               <div class="row">
               <label for="name">Your name:</label><br />
-              <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+              <input id="name" class="input" name="name" type="text" value="" size="120" /><br />
               </div>
               <div class="row">
                 <label for="email">Your email:</label><br />
-                <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+                <input id="email" class="input" name="email" type="text" value="" size="120" /><br />
               </div>
               <div class="row">
                 <label for="message">Your message:</label><br />
-                <textarea id="message" class="input" name="message" rows="10" cols="60"></textarea><br />
+                <textarea id="message" class="input" name="message" rows="15" cols="85"></textarea><br />
               </div>
               <input class="submit" type="submit" value="Submit" />
             </form>   
@@ -60,7 +60,7 @@
       </div>
 
        <!--footer-->
-      <footer><p id="content_footer">Made with live by Samson Lewin</p></footer>
+      <footer><p id="content_footer">Made with love by Samson Lewin</p></footer>
       
     </body>
    </html>
