--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
         <div id="contact">
           <h1>Contact</h1>
           <div id="bar1"></div>
+
+          <img id="call_me" src="assets/images/call_me.gif">
             
 
             <form id="contact_form" action="mailto:samsonlewin@gmail.com" method="POST" enctype="multipart/form-data">
