--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
           <h2>Connect With Me</h2>
           <div id="bar2"></div>
             <div id="icons">
-              <a target="_blank" href="https://github.com/samsonlewin"><img class="social" src="assets/images/github.png"></a>
+              <a target="_blank" href="https://github.com/samsonlewin"><img class="social" src="assets/images/Github_test.png"></a>
               <a target="_blank" href="https://fr.linkedin.com/in/samson-lewin"><img class="social" src="assets/images/linkedin.png"></a>
               <a target="_blank" href="http://stackoverflow.com/users/7289590/samson-lewin"><img class="social" src="assets/images/stack_overflow.png"></a>
             </div>
