--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h2>Connect With Me</h2>
           <div id="bar2"></div>
             <div id="icons">
-              <a target="_blank" href="https://github.com/samsonlewin"><img class="social" src="assets/images/github.png"></a>
+              <a target="_blank" href="https://github.com/samsonlewin"><img class="social" src="assets/images/Github_test.png"></a>
               <a target="_blank" href="https://fr.linkedin.com/in/samson-lewin"><img class="social" src="assets/images/linkedin.png"></a>
               <a target="_blank" href="http://stackoverflow.com/users/7289590/samson-lewin"><img class="social" src="assets/images/stack_overflow.png"></a>
             </div>
@@ -48,7 +48,7 @@
       </div>
 
        <!--footer-->
-      <footer><p id="content_footer">Made with live by Samson Lewin</p></footer>
+      <footer><p id="content_footer">Made with love by Samson Lewin</p></footer>
       
     </body>
    </html>
