--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
 
        <!--footer-->
-      <footer><p id="content_footer">Made with love by Samson Lewin</p></footer>
+      <footer><p id="content_footer">© copyright 2017. Made with love by Samson Lewin</p></footer>
       
     </body>
    </html>
